bug: 30940 used overflow-x scroll instead of auto
http://bugzilla.zimbra.com/show_bug.cgi?id=30940

--- a/Zimlet/src/zimlet/com_zimbra_calscheduler/calscheduler.css
+++ b/Zimlet/src/zimlet/com_zimbra_calscheduler/calscheduler.css
@@ -1,6 +1,6 @@
 .CalScheduler_TimeGrid {
 	background-color: #ffffff;
-	overflow-x: auto;
+	overflow-x: scroll;
 	overflow-y: hidden;
 }
 
